--- a/istio/bookinfo-v2.yaml
+++ b/istio/bookinfo-v2.yaml
@@ -1,4 +1,4 @@
-# Copyright 2017 Istio Authors
+# Copyright Istio Authors
 #
 #   Licensed under the Apache License, Version 2.0 (the "License");
 #   you may not use this file except in compliance with the License.
@@ -13,6 +13,20 @@
 #   limitations under the License.
 
 ##################################################################################################
+# This file defines the services, service accounts, and deployments for the Bookinfo sample.
+#
+# To apply all 4 Bookinfo services, their corresponding service accounts, and deployments:
+#
+#   kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml
+#
+# Alternatively, you can deploy any resource separately:
+#
+#   kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml -l service=reviews # reviews Service
+#   kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml -l account=reviews # reviews ServiceAccount
+#   kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml -l app=reviews,version=v3 # reviews-v3 Deployment
+##################################################################################################
+
+##################################################################################################
 # Details service
 ##################################################################################################
 apiVersion: v1
@@ -24,10 +38,17 @@ metadata:
     service: details
 spec:
   ports:
-    - port: 9080
-      name: http
+  - port: 9080
+    name: http
   selector:
     app: details
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: bookinfo-details
+  labels:
+    account: details
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -50,12 +71,13 @@ spec:
         app: details
         version: v1
     spec:
+      serviceAccountName: bookinfo-details
       containers:
-        - name: details
-          image: docker.io/istio/examples-bookinfo-details-v1:1.17.0
-          imagePullPolicy: IfNotPresent
-          ports:
-            - containerPort: 9080
+      - name: details
+        image: docker.io/istio/examples-bookinfo-details-v1:1.17.0
+        imagePullPolicy: IfNotPresent
+        ports:
+        - containerPort: 9080
 ---
 ##################################################################################################
 # Ratings service
@@ -69,10 +91,17 @@ metadata:
     service: ratings
 spec:
   ports:
-    - port: 9080
-      name: http
+  - port: 9080
+    name: http
   selector:
     app: ratings
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: bookinfo-ratings
+  labels:
+    account: ratings
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -95,17 +124,13 @@ spec:
         app: ratings
         version: v1
     spec:
+      serviceAccountName: bookinfo-ratings
       containers:
-        - name: ratings
-          image: docker.io/istio/examples-bookinfo-ratings-v1:1.17.0
-          imagePullPolicy: IfNotPresent
-          ports:
-            - containerPort: 9080
----
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: bookinfo-reviews
+      - name: ratings
+        image: docker.io/istio/examples-bookinfo-ratings-v1:1.17.0
+        imagePullPolicy: IfNotPresent
+        ports:
+        - containerPort: 9080
 ---
 ##################################################################################################
 # Reviews service
@@ -119,10 +144,17 @@ metadata:
     service: reviews
 spec:
   ports:
-    - port: 9080
-      name: http
+  - port: 9080
+    name: http
   selector:
     app: reviews
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: bookinfo-reviews
+  labels:
+    account: reviews
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -145,12 +177,26 @@ spec:
         app: reviews
         version: v1
     spec:
+      serviceAccountName: bookinfo-reviews
       containers:
-        - name: reviews
-          image: docker.io/istio/examples-bookinfo-reviews-v1:1.17.0
-          imagePullPolicy: IfNotPresent
-          ports:
-            - containerPort: 9080
+      - name: reviews
+        image: docker.io/istio/examples-bookinfo-reviews-v1:1.17.0
+        imagePullPolicy: IfNotPresent
+        env:
+        - name: LOG_DIR
+          value: "/tmp/logs"
+        ports:
+        - containerPort: 9080
+        volumeMounts:
+        - name: tmp
+          mountPath: /tmp
+        - name: wlp-output
+          mountPath: /opt/ibm/wlp/output
+      volumes:
+      - name: wlp-output
+        emptyDir: {}
+      - name: tmp
+        emptyDir: {}
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -175,11 +221,24 @@ spec:
     spec:
       serviceAccountName: bookinfo-reviews
       containers:
-        - name: reviews
-          image: docker.io/istio/examples-bookinfo-reviews-v2:1.17.0
-          imagePullPolicy: IfNotPresent
-          ports:
-            - containerPort: 9080
+      - name: reviews
+        image: docker.io/istio/examples-bookinfo-reviews-v2:1.17.0
+        imagePullPolicy: IfNotPresent
+        env:
+        - name: LOG_DIR
+          value: "/tmp/logs"
+        ports:
+        - containerPort: 9080
+        volumeMounts:
+        - name: tmp
+          mountPath: /tmp
+        - name: wlp-output
+          mountPath: /opt/ibm/wlp/output
+      volumes:
+      - name: wlp-output
+        emptyDir: {}
+      - name: tmp
+        emptyDir: {}
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -204,16 +263,24 @@ spec:
     spec:
       serviceAccountName: bookinfo-reviews
       containers:
-        - name: reviews
-          image: docker.io/istio/examples-bookinfo-reviews-v3:1.17.0
-          imagePullPolicy: IfNotPresent
-          ports:
-            - containerPort: 9080
----
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: bookinfo-productpage
+      - name: reviews
+        image: docker.io/istio/examples-bookinfo-reviews-v3:1.17.0
+        imagePullPolicy: IfNotPresent
+        env:
+        - name: LOG_DIR
+          value: "/tmp/logs"
+        ports:
+        - containerPort: 9080
+        volumeMounts:
+        - name: tmp
+          mountPath: /tmp
+        - name: wlp-output
+          mountPath: /opt/ibm/wlp/output
+      volumes:
+      - name: wlp-output
+        emptyDir: {}
+      - name: tmp
+        emptyDir: {}
 ---
 ##################################################################################################
 # Productpage services
@@ -227,10 +294,17 @@ metadata:
     service: productpage
 spec:
   ports:
-    - port: 9080
-      name: http
+  - port: 9080
+    name: http
   selector:
     app: productpage
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: bookinfo-productpage
+  labels:
+    account: productpage
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -255,10 +329,15 @@ spec:
     spec:
       serviceAccountName: bookinfo-productpage
       containers:
-        - name: productpage
-          image: docker.io/istio/examples-bookinfo-productpage-v1:1.17.0
-          imagePullPolicy: IfNotPresent
-          ports:
-            - containerPort: 9080
+      - name: productpage
+        image: docker.io/istio/examples-bookinfo-productpage-v1:1.17.0
+        imagePullPolicy: IfNotPresent
+        ports:
+        - containerPort: 9080
+        volumeMounts:
+        - name: tmp
+          mountPath: /tmp
+      volumes:
+      - name: tmp
+        emptyDir: {}
 ---
-
